Tue Feb 16 17:01:23 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * tools/odds_dissector/README:
        * tools/odds_dissector/colorfilters:

          Added canned color filters to identify DCPS protocol packets.

        * tools/odds_dissector/odds_packet.cpp:

          Minor formatting updates.

Tue Feb 16 15:24:20 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * java/idl2jni/tests/simple/idl2jni_test_simple.mpc:
        * java/idl2jni/tests/simple/simple.idl:

          Enabled the test after commenting-out some unsupported IDL
          constructs (passing arrays as parameters to operations).

Tue Feb 16 06:44:29 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * tools/odds_dissector/README:

          Minor formatting updates.

Tue Feb 16 00:08:15 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * performance-tests/Bench/src/Process.cpp:

          Updated flow control depending on the publication and
          subscription matching status.

        * performance-tests/Bench/src/Publication.h:
        * performance-tests/Bench/src/Publication.cpp:

            associations()
            missing_associations()
              - new accessors for state information.

        * performance-tests/Bench/src/Subscription.h:
        * performance-tests/Bench/src/Subscription.cpp:

            associations() - new accessor for state information.

        * performance-tests/Bench/tests/latency/*.ini

          Updated publication specifications with an Associations value
          for the updated flow control.

        * performance-tests/Bench/tests/thru/bidir-*-*-*.ini:

          Updated modified latency tests to current flow control and test
          requirements.  Renamed from Mibi bps to Mbps.

        * performance-tests/Bench/tests/thru/bidir-remote-be.ini:
        * performance-tests/Bench/tests/thru/bidir-remote-rel.ini:

          Renamed the remote end configuration files to better reflect
          their semantics.
